--- a/src/counter.module.css
+++ b/src/counter.module.css
@@ -6,7 +6,7 @@
     margin-top: 50px;
     width: 1200px;
     height: 550px;
-    
+
 }
 
 .mainPanel {
@@ -14,7 +14,7 @@
     display: inline-block;
     width: 550px;
     height: 400px;
-    border: 5px solid #7f00ff ;
+    border: 5px solid #7f00ff;
     border-radius: 35px;
     margin-top: 50px;
     margin-left: 10px;
@@ -26,7 +26,7 @@
     display: inline-block;
     width: 550px;
     height: 400px;
-    border: 5px solid #7f00ff ;
+    border: 5px solid #7f00ff;
     border-radius: 35px;
     margin-left: 630px;
     margin-top: 50px;
@@ -53,16 +53,17 @@
     margin-top: 10px;
     width: 100px;
     height: 35px;
-    border: 4px solid #7f00ff ;
+    border: 4px solid #7f00ff;
     border-radius: 10px;
-    color: #7f00ff ;
+    color: #7f00ff;
     font-weight: bold;
     cursor: pointer;
 }
 
-.res:hover{
+.res:hover {
     color: gold;
     border: 4px solid gold;
+    transition: 0.3s;
 }
 
 .inc {
@@ -70,17 +71,19 @@
     margin-top: 10px;
     width: 100px;
     height: 35px;
-    border: 4px solid #7f00ff ;
+    border: 4px solid #7f00ff;
     border-radius: 10px;
-    color: #7f00ff ;
+    color: #7f00ff;
     font-weight: bold;
     cursor: pointer;
 
 }
 
-.inc:hover{
+.inc:hover {
     color: gold;
     border: 4px solid gold;
+    transition: 0.3s;
+
 }
 
 .dec {
@@ -89,17 +92,19 @@
     margin-left: 10px;
     width: 100px;
     height: 35px;
-    border: 4px solid #7f00ff ;
+    border: 4px solid #7f00ff;
     border-radius: 10px;
-    color: #7f00ff ;
+    color: #7f00ff;
     font-weight: bold;
     cursor: pointer;
 
 }
 
-.dec:hover{
+.dec:hover {
     color: gold;
     border: 4px solid gold;
+    transition: 0.3s;
+
 }
 
 .inputMinValue {
@@ -123,15 +128,17 @@
     margin-top: 15px;
     width: 100px;
     height: 35px;
-    border: 4px solid #7f00ff ;
+    border: 4px solid #7f00ff;
     border-radius: 10px;
-    color: #7f00ff ;
+    color: #7f00ff;
     font-weight: bold;
     cursor: pointer;
 }
-.minValue:hover{
+
+.minValue:hover {
     color: gold;
     border: 4px solid gold;
+    transition: 0.3s;
 }
 
 .maxValue {
@@ -140,21 +147,23 @@
     margin-top: 15px;
     width: 100px;
     height: 35px;
-    border: 4px solid #7f00ff ;
+    border: 4px solid #7f00ff;
     border-radius: 10px;
-    color: #7f00ff ;
+    color: #7f00ff;
     font-weight: bold;
     cursor: pointer;
 }
-.maxValue:hover{
+
+.maxValue:hover {
     color: gold;
     border: 4px solid gold;
+    transition: 0.3s;
 }
 
-.red{
+.red {
     color: red
 }
 
-.dis{
+.dis {
     color: chartreuse;
 }
